# mini-search-engine

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  nutch-site.xml  parks.yaml  seeds.txt
.github/workflows/: rust.yml
crates/html-search/: Cargo.toml
crates/html-search/src/: lib.rs
crates/html-search/templates/: base.html  index.html  search_results.html
crates/search-api/: Cargo.toml
crates/search-api-elasticsearch/: Cargo.toml
crates/search-api-elasticsearch/src/: lib.rs
crates/search-api/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs
